Reader: Fix top margin streams, z-indexing issues

--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -13,7 +13,10 @@
 
 .is-group-reader-refresh .recommended-for-you.main,
 .is-group-reader-refresh .following.main {
-	margin: 30px auto;
+
+	@include breakpoint( ">660px" ) {
+		margin: 30px auto;
+	}
 }
 
 .is-group-reader-refresh .reader__full-post-content {
